removed endpoint URL, request access or install ollama

--- a/work/bioc-langchain.ipynb
+++ b/work/bioc-langchain.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c2f2bfe8-eab6-495f-ac27-5c436800ddb0",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "47d1e929-1b05-42de-abcc-d18bc6e7545e",
    "metadata": {},
    "outputs": [],
@@ -43,10 +43,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3089973f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "40b85438da8e4398b88d8d6025f5e2c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "modules.json:   0%|          | 0.00/349 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1b48d620af4a4895961bdb08564dc305",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config_sentence_transformers.json:   0%|          | 0.00/116 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c79ff443ec0d40c893d28779de518731",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "README.md:   0%|          | 0.00/10.7k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d0b19167ae634513905b6b7c8d030164",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "sentence_bert_config.json:   0%|          | 0.00/53.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d57eed87f58c48fc95186c13fa9e0dff",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/612 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "624a51f085e342f18ac8971cc5e73950",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/90.9M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1de76ac37f0b41dc9cdfb1bbcf38d9b0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/350 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9cdb37c4972741f589134ed3423ab178",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b6d722b13a644774a2a5888c96a0c4c0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json:   0%|          | 0.00/466k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "99ee376495d64871835e9fcafed7a465",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "special_tokens_map.json:   0%|          | 0.00/112 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "87324c80d11a499fa1d6ac1c25f53216",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "1_Pooling/config.json:   0%|          | 0.00/190 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Set the model and temperature\n",
     "llm = Ollama(base_url= ccb_endpoint, model=\"llama2\", temperature=0)\n",
@@ -64,12 +219,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "37f2598f-26cb-4dad-a5eb-96879dd5ec8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "SummarizedExperiment is a tool in the Google Cloud Platform that allows you to summarize and analyze large datasets. It is designed to help data scientists and analysts quickly and easily identify the most important insights from complex datasets, without having to spend hours or days manually analyzing the data.\n",
+      "\n",
+      "SummarizedExperiment uses machine learning algorithms to automatically generate a summary of the dataset, including key findings, trends, and patterns. This summary is presented in an easy-to-understand format, such as a report or dashboard, that can be shared with stakeholders.\n",
+      "\n",
+      "Some of the key features of SummarizedExperiment include:\n",
+      "\n",
+      "1. Automated summarization: SummarizedExperiment uses machine learning algorithms to automatically generate a summary of the dataset, without requiring manual analysis.\n",
+      "2. Customizable summaries: Users can customize the summary to focus on specific aspects of the data, such as trends, patterns, or insights.\n",
+      "3. Interactive visualizations: SummarizedExperiment provides interactive visualizations that allow users to explore the data in more detail, and gain a deeper understanding of the insights identified by the algorithm.\n",
+      "4. Collaboration tools: SummarizedExperiment allows multiple users to collaborate on summaries, making it easier to share insights and work together on projects.\n",
+      "5. Integration with other Google Cloud tools: SummarizedExperiment integrates with other Google Cloud tools, such as BigQuery and Data Studio, allowing users to easily incorporate the summaries into their existing workflows.\n",
+      "\n",
+      "Overall, SummarizedExperiment is a powerful tool for data scientists and analysts who need to quickly and easily identify important insights from large datasets. It can help organizations make more informed decisions by providing a clear and concise summary of the data, without requiring manual analysis.\n"
+     ]
+    }
+   ],
    "source": [
-    "chat_model_response = llm.invoke(\"<>\")\n",
+    "chat_model_response = llm.invoke(\"what is summarizedExperiment\")\n",
     "print(chat_model_response)"
    ]
   },
@@ -83,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "da3623c1-1076-4881-b8ca-36ae58db8fce",
    "metadata": {},
    "outputs": [],
@@ -102,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "05520439-c28e-4750-8fa2-97e46e2695bb",
    "metadata": {},
    "outputs": [],
@@ -143,10 +319,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "eae4e526-e79e-4bc5-86f8-e5a9f0019f8a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The `SummarizedExperiment` package provides a variety of classes for summarizing and visualizing experimental data. Here are some of the main classes provided by the package:\n",
+      "\n",
+      "1. `Summary`: This is the base class for all summary objects in the package. It provides methods for calculating summary statistics, such as means, standard deviations, and counts, as well as methods for visualizing the data.\n",
+      "2. `Experiment`: This class represents an entire experiment, including all of the observations and variables. It provides methods for calculating summary statistics for the entire experiment, as well as methods for visualizing the data.\n",
+      "3. `Observation`: This class represents a single observation in an experiment. It provides methods for calculating summary statistics for a single observation, as well as methods for visualizing the data.\n",
+      "4. `Variable`: This class represents a variable in an experiment. It provides methods for calculating summary statistics for a single variable, as well as methods for visualizing the data.\n",
+      "5. `SummaryTable`: This class provides a convenient way to display summary statistics for multiple variables in a table format.\n",
+      "6. `Plot`: This class provides a convenient way to create various types of plots, such as bar plots, line plots, and scatter plots, to visualize experimental data.\n",
+      "7. `Heatmap`: This class provides a convenient way to create heatmaps to visualize high-dimensional data.\n",
+      "8. `PCA`: This class provides a convenient way to perform principal component analysis (PCA) on experimental data.\n",
+      "9. `tSNE`: This class provides a convenient way to perform t-distributed Stochastic Neighbor Embedding (t-SNE) on experimental data.\n",
+      "10. `Visualization`: This class provides a convenient way to create various types of visualizations, such as scatter plots, bar plots, and heatmaps, to visualize experimental data.\n",
+      "\n",
+      "These are some of the main classes provided by the `SummarizedExperiment` package. There may be other classes available depending on the version of the package you are using.\n"
+     ]
+    }
+   ],
    "source": [
     "#test without rag\n",
     "chat_model_response = llm.invoke(\"How many classes are there in the SummarizedExperiment package?\")\n",
@@ -163,10 +361,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0204936f-f4e0-4b99-b196-ac98e73611bc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "According to the documentation provided, the SummarizedExperiment package contains two classes: `SummarizedExperiment` and `RangedSummarizedExperiment`. The `SummarizedExperiment` class is a matrix-like container that represents features of interest (such as genes, transcripts, exons, etc.) and samples. It can contain one or more assays, each represented by a matrix-like object of numeric or other mode.\n",
+      "\n",
+      "The `RangedSummarizedExperiment` class is an extension of the `SummarizedExperiment` class that allows for the representation of ranges of values for the features of interest.\n",
+      "\n",
+      "Therefore, there are two classes in the SummarizedExperiment package: `SummarizedExperiment` and `RangedSummarizedExperiment`."
+     ]
+    }
+   ],
    "source": [
     "# Run with Retrival augment\n",
     "for chunk in rag_chain.stream(\"How many classes are there in the SummarizedExperiment package?\"):\n",
@@ -262,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
